# NMR

./: pyproject.toml  setup.py
examples/: example1.py  example2.py  example3.py  example4.py
neural_renderer/: __init__.py  look.py  projection.py  rasterize.py  renderer.py  visibility.py
neural_renderer/cuda/: load_textures_cuda_kernel.cu  rasterize_cuda_kernel.cu
tests/: test_lighting.py  test_load_obj.py  test_look_at.py  test_perspective.py  test_rasterize.py  test_rasterize_depth.py  test_rasterize_silhouettes.py  test_renderer.py  test_save_obj.py  utils.py
